添加了底部菜单TAB
底部菜单TAB

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ android {
 
     defaultConfig {
         applicationId "cn.anline.ui"
+//        minSdkVersion 7
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
