添加了Windows Phone布局 UI
添加了Windows Phone 8布局 UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,7 +88,8 @@
         <activity android:name=".microvideo.shortvideo.VideoActivity" />
         <activity android:name=".microvideo.shortvideo.FirstActivity" />
         <activity android:name=".AnUI2Activity" />
-        <activity android:name=".tagview.TagViewActivity"></activity>
+        <activity android:name=".tagview.TagViewActivity" />
+        <activity android:name=".wpui.WpUIActivity"></activity>
     </application>
 
 </manifest>
