添加了 浏览器
add web Browser

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,6 @@
     <uses-permission android:name="android.permission.NFC" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
@@ -89,7 +88,8 @@
         <activity android:name=".microvideo.shortvideo.FirstActivity" />
         <activity android:name=".AnUI2Activity" />
         <activity android:name=".tagview.TagViewActivity" />
-        <activity android:name=".wpui.WpUIActivity"></activity>
+        <activity android:name=".wpui.WpUIActivity" />
+        <activity android:name=".browser.BrowserActivity"></activity>
     </application>
 
 </manifest>
