--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.1'
+    compile project(':umeng-analytics-v5.6.4')
+    compile project(':umeng-update-v2.6.0.1')
 }
